[package]
name = "cable"
version = "0.1.0"
authors = ["Volhorc <69816212+Ocrrcc@users.noreply.github.com>"]
edition = "2018"
description = "A pointer type for heap allocation, with a header and size stashed at address"
repository = "https://github.com/Volhorc/cable"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
