[package]
name = "cable"
version = "0.1.1"
authors = ["Volhorc <69816212+Ocrrcc@users.noreply.github.com>"]
edition = "2018"
description = "A cable(pointer) with a hook(header at address) at the end and a sized payload(array)"
repository = "https://github.com/Volhorc/cable"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
